# fast-sbd

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: ci.yml
scripts/: check.sh  setup.sh
