# Package configuration

[metadata]
name = fast-sbd
version = 0.1.0
author = Romain Keramitas
author_email = r.keramitas@gmail.com
description = Fast sentence boundary detection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rom1K/fast-sbd
project_urls =
    Bug Tracker = https://github.com/rom1K/fast-sbd/issues

[options]
include_package_data = True
package_dir =
    =src
packages = find:
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

# Code conventions

[darglint]
ignore=DAR402
enable=DAR104,DAR105

[flake8]
ignore =
    E24,E121,E123,E126,E203,E226,E231,E704,W503,W504
per-file-ignores =
    **/__init__.py:F401
max-line-length=88

[isort]
profile=black
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[mypy]
exclude=tests/
ignore_missing_imports=True

[pydocstyle]
convention = google
add_ignore = D104
